--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,20 @@ python = "^3.12"
 fastapi = "^0.117.1"
 uvicorn = {extras = ["standard"], version = "^0.36.1"}
 pydantic = {extras = ["email"], version = "^2.11.9"}
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
 
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.13.1"
+black = "^25.9.0"
+
+[tool.ruff]
+line-length = 100
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "W"]
+ignore = []
 
 [build-system]
 requires = ["poetry-core"]
