--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.117.1"
 uvicorn = {extras = ["standard"], version = "^0.36.1"}
 pydantic = {extras = ["email"], version = "^2.11.9"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
+aiosqlite = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.9.0"
