--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ uvicorn = {extras = ["standard"], version = "^0.36.1"}
 pydantic = {extras = ["email"], version = "^2.11.9"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
 aiosqlite = "^0.21.0"
+pydantic-settings = "^2.10.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.9.0"
