--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = {extras = ["email"], version = "^2.11.9"}
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
 aiosqlite = "^0.21.0"
 pydantic-settings = "^2.10.1"
+alembic = "^1.16.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.9.0"
